# raspberry-pi-controller-runtime

./: .editorconfig  .gitignore  .lintstagedrc.json  AGENTS.md  Agents.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  architecture_minimal.md  config_examples.md  config_profiles.md  diagnostics.md  hardware_setup.md  torque_models.md
examples/: demo_stand.py  monitor_diagnostics.py
models/torque_bundles/: README.md
models/torque_bundles/8d98d14846/: energy_shaping.ts  metadata.json  preprocessing.json
scripts/: flash_controller.py  hardware_microstrain_knn.yaml  hardware_microstrain_mock.yaml  hardware_microstrain_shank.yaml  hardware_microstrain_vae.yaml  mock_bundle_config.yaml  mock_faulty_hardware_config.yaml  mock_hardware_config.yaml  replay_bundle_config.yaml  replay_bundle_rtplot_config.yaml  replay_session.py  run.py
src/rpc_runtime/: __init__.py
src/rpc_runtime/actuators/: README.md  __init__.py  base.py  mock.py  osl_actuator.py
src/rpc_runtime/config/: __init__.py  default.yaml  hardware_config.yaml  loader.py  models.py  profile.py  runtime.py
src/rpc_runtime/controllers/: __init__.py  base.py  pi_controller.py
src/rpc_runtime/pipelines/: __init__.py  calibration.py  data_wrangler.py  diagnostics.py  runtime_loop.py  safety.py  scheduler.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: test_actuator_base.py  test_config_runtime.py  test_controller_with_mocks.py  test_grf_staleness.py  test_placeholder.py  test_sensor_faults.py
(+40 files in other folders)
